--- a/home/static/home/styles/_custom-settings.scss
+++ b/home/static/home/styles/_custom-settings.scss
@@ -5,10 +5,10 @@
 $background: #ffffff; //WHITE
 $font: #373737; //CHARCOAL
 
-$navbar: #a52714;
+$navbar: #f4f4f4;
 $navbar-header-background:#f4f4f4;
-$navbar-active: #ffffff;
-$navbar-unactive: #DCD0C0;
+$navbar-active: #a52714;
+$navbar-unactive: #000000;
 
 $section-header: #373737;
 $solid-link: #373737;
