--- a/home/static/home/styles/home.scss
+++ b/home/static/home/styles/home.scss
@@ -23,9 +23,13 @@ html {
 .solid-link {
     color: $solid-link;
     text-decoration: none;
+    &:hover {
+        text-decoration: none;
+    }
 }
 
 /* Custom Card */
+// removed border and changed background
 .card {
     border: none;
     border-radius: 0;
@@ -38,23 +42,25 @@ html {
 /* Latest Stories Card */
 .latest-stories {
     border-left: 2px solid $card-header-bg;
+    .list-group:last-child .list-group-item:last-child {border-radius: 0;}
     .card-header .card-title {
         text-transform: uppercase;
         font-family: "Oswald", sans-serif;
+        font-size: 1.5rem;
     }
     .list-group-item {
         border: none;
         background-color: $card-header-bg;
-        * {
+        a, strong {
             color: white;
-            text-transform: uppercase;
-            letter-spacing: 0.125rem;
-            font-size: 0.875rem;
-            font-family: "Oswald", sans-serif;
-            font-weight: bold;
+            line-height: 1.4rem;
+            font-size: 0.9rem;
+            font-weight: 700;
+            text-shadow: 0 0 5px rgba(0,0,0,0.4)
         }
     }
 }
+
 /* Story */
 .title {
     padding-bottom: 1rem;
@@ -71,6 +77,7 @@ html {
         font-weight: bold;
     }
 }
+
 /* Section */
 .section-header {
     /* no link */
@@ -112,6 +119,8 @@ html {
         width: 100%;
     }
 }
+
+/* Custom Separators */
 .section-separator {
     margin-top: 1.5rem;
     margin-bottom: 1.5rem;
