--- a/home/templates/shared/navbar.html
+++ b/home/templates/shared/navbar.html
@@ -1,4 +1,4 @@
-<div class="navbar-wrapper static-top not-scrolled mb-4">
+<div class="navbar-wrapper static-top not-scrolled">
     <header class="navbar-wrapper-header w-100">
         <a class="logo mx-auto py-3 d-none d-lg-block" href="#">
             {% include "home/includes/_logo-svg.html" %}
@@ -10,19 +10,24 @@
             {% include "home/includes/_logo-svg.html" %}
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <i class="fas fa-bars" style="color:white"></i>
+            <i class="fas fa-bars"></i>
         </button>
         <div class="collapse navbar-collapse" id="navbarDropdown">
             <ul class="navbar-nav mx-auto">
                 <li class="nav-item {% if request.get_full_path == "/" %} active {% endif %}">
-                  <a class="nav-link mx-1" href="{% url "home:index"%}">Home</a>
+                  <a class="nav-link" href="{% url "home:index"%}">Home</a>
                 </li>
                 {% for section in section_roots %}
                   <li class="nav-item {% if navbar == section.name %} active {% endif %}">
-                    <a class="nav-link mx-1" href="{% url "home:view_section" section.name %}">{{ section.title }}</a>
+                    <a class="nav-link" href="{% url "home:view_section" section.name %}">{{ section.title }}</a>
                   </li>
                 {% endfor %}
             </ul>
         </div>
     </nav>
 </div>
+{# Add margin to body #}
+<script type="text/javascript">
+    $(".navbar-wrapper").removeClass("static-top").addClass("fixed-top");
+    $("body").css("marginTop", $(".navbar-wrapper").outerHeight(true));
+</script>
