more modern stuff

--- a/home/static/home/styles/_custom-settings.scss
+++ b/home/static/home/styles/_custom-settings.scss
@@ -5,9 +5,9 @@
 $background: #ffffff; //WHITE
 $font: #373737; //CHARCOAL
 
-$navbar: #f4f4f4;
-$navbar-header-background:#f4f4f4;
-$navbar-active: #a52714;
+$navbar: #ffffff;
+$navbar-header-background:#ffffff;
+$navbar-active: #c54c3a;
 $navbar-unactive: #000000;
 
 $section-header: #373737;
