--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -4,15 +4,37 @@
 
 {% block content %}
     <div class="container">
-            {% load static %} <!-- FOR TESTING -->
-            <hr class="my-4">
+            {% load static %} <!-- FOR TESTING - IMAGES -->
+            <h1 class="display-4 text-center text-uppercase mb-4">Featured</h1>
+            <div class="row featured mb-5">
+                <div class="col-md-6 featured-col">
+                    <img class="img-fluid featured-img" src="{% static 'home/images/img_5.jpg' %}" alt="">
+                    <div class="featured-content ml-3">
+                        <a class="featured-title" href="#">Featured Story Title</a>
+                        <p class="featured-info">
+                            <i class="far fa-user mr-1"></i><a href="#">Author</a>
+                             <i class="far fa-clock mx-1"></i><a href="#">Time Stamp</a>
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-6 featured-col">
+                    <img class="img-fluid featured-img" src="{% static 'home/images/img_5.jpg' %}" alt="">
+                    <div class="featured-content ml-3">
+                        <a class="featured-title" href="#">Featured Story Title</a>
+                        <p class="featured-info">
+                            <i class="far fa-user mr-1"></i><a href="#">Author</a>
+                             <i class="far fa-clock mx-1"></i><a href="#">Time Stamp</a>
+                        </p>
+                    </div>
+                </div>
+            </div>
             {% for section in section_roots %}
-                <div id="{{section.title}}" class="container index-featurette">
-                    <h1 class="section-header display-4 text-center">
+                <div id="{{section.title}}" class="container">
+                    <h1 class="section-header display-4 text-center text-uppercase">
                         <a href="{% url "home:view_section" section.name %}">{{section.title}}</a>
                     </h1>
                     <hr class="my-4">
-                    {% for story in section.all_stories.all|slice:"5" %}
+                    {% for story in section.all_stories.all|slice:"3" %}
                         <div class="row mb-3">
                             <div class="col-md-4">
                                 <img class="img-fluid mx-auto"
@@ -39,22 +61,3 @@
             {% endfor %}
     </div>
 {% endblock %}
-{# {% block content %} #}
-    {# <div class="container"> #}
-        {# {% for section in section_roots %} #}
-            {# <div class="card"> #}
-                {# <div class="card-header"> #}
-                    {# <a class="solid-link" href="{% url "home:view_section" section.name %}"><h4 class="card-title">{{ section.title }}</h4></a> #}
-                {# </div> #}
-                {# <ul class="list-group list-group-flush"> #}
-                    {# {% for story in section.all_stories.all|slice:":3" %} #}
-                        {# <li class="list-group-item"> #}
-                            {# {% include "shared/story_summary.html" with story=story %} #}
-                        {# </li> #}
-                    {# {% endfor %} #}
-                {# </ul> #}
-            {# </div> #}
-            {# <br> #}
-        {# {% endfor %} #}
-    {# </div> #}
-{# {% endblock %} #}
