--- a/home/templates/shared/footer.html
+++ b/home/templates/shared/footer.html
@@ -4,7 +4,7 @@
             <h4 class="footer-logo">Silver<span>Chips</span> Online</h4>
             <p class="footer-links">
                 {% for section in section_roots %}
-                    <a href="{% url 'home:view_section' section.name %}">{{section.title}}</a> &middot;
+                    <a href="{% url 'home:view_section' section.name %}">{{section.title}}</a> {% if not forloop.last %} &middot; {% endif %}
                 {% endfor %}
             </p>
             <p class="copyright">Silver Chips © 2018</p>
