--- a/home/static/home/styles/home.scss
+++ b/home/static/home/styles/home.scss
@@ -27,9 +27,9 @@ html {
         color: $navbar-active;
     }
 }
+/* Pill */
 
-/* Custom Card */
-// removed border and changed background
+/* Card */
 .card {
     border: none;
     border-radius: 0;
