--- a/home/templates/shared/navbar.html
+++ b/home/templates/shared/navbar.html
@@ -3,6 +3,9 @@
         <a class="logo mx-auto py-3 d-none d-lg-block" href="#">
             {% include "home/includes/_logo-svg.html" %}
         </a>
+        <div id="subscribe" class="d-none d-lg-block">
+            <a class="d-inline-block mx-4" href="#">Subscribe</a>
+        </div>
         <h6 class="lead text-center d-none d-lg-block">Montgomery Blair High School's Online Student Newspaper</h6>
     </header>
     <nav class="navbar navbar-expand-lg">
@@ -22,6 +25,9 @@
                     <a class="nav-link" href="{% url "home:view_section" section.name %}">{{ section.title }}</a>
                   </li>
                 {% endfor %}
+                <li id="subscribe" class="nav-item d-lg-none">
+                  <a class="nav-link" href="#">Subscribe</a>
+                </li>
             </ul>
         </div>
     </nav>
