continued reorganizing and added stubs
Former-commit-id: a698b6ef2740de35200e6c596090f1a73128afcd

--- a/home/static/home/styles/imports/_footer-styles.scss
+++ b/home/static/home/styles/imports/_footer-styles.scss
@@ -27,19 +27,6 @@
             margin: 0;
             span {color: rgb(184, 80, 64);}
         }
-        .footer-links {
-            padding-top: 1.5em;
-            a {
-                position: relative;
-                text-decoration: none;
-                text-transform: uppercase;
-                font-family: "Oswald", sans-serif;
-                font-size: 0.9em;
-                font-weight: bold;
-                letter-spacing: 0.125rem;
-                color: white;
-            }
-        }
     }
     .site-footer-center {
         width: 100%;
@@ -125,6 +112,16 @@
                 }
             }
         }
+    }
+    .footer-link {
+        position: relative;
+        text-decoration: none;
+        text-transform: uppercase;
+        font-family: "Oswald", sans-serif;
+        font-size: 0.9em;
+        font-weight: bold;
+        letter-spacing: 0.125rem;
+        color: white;
     }
 
     .copyright {
