--- a/home/templates/home/includes/footer.html
+++ b/home/templates/home/includes/footer.html
@@ -2,12 +2,11 @@
     <div class="site-footer-expand">
         <div class="site-footer-left">
             <h4 class="footer-logo">Silver<span>Chips</span> Online</h4>
-            <p class="footer-links">
+            <p class="mt-4">
                 {% for section in section_roots %}
-                    <a href="{% url 'home:view_section' section.name %}">{{ section.title }}</a> {% if not forloop.last %} &middot; {% endif %}
+                    <a class="footer-link" href="{% url 'home:view_section' section.name %}">{{ section.title }}</a> {% if not forloop.last %} &middot; {% endif %}
                 {% endfor %}
             </p>
-            <p><a href="/staff/login">Login</a></p>
             <p class="copyright">Content &copy; 2001-2018, Website &copy; 2016-2018 SilverChips Online</p>
         </div>
         <div class="site-footer-center">
@@ -35,6 +34,9 @@
     			<a target="_blank" href="https://www.youtube.com/channel/UChQKJ8Jyaw6tgZUWha6SFSg"><i class="fab fa-youtube"></i></a>
                 <a target="_blank" href="https://www.facebook.com/SilverChipsOnline/"><i class="fab fa-facebook"></i></a>
     		</div>
+            <p class="mt-4">
+                <a class="footer-link" href="{% url 'staff:login' %}">LOGIN</a> {% if not forloop.last %} &middot; {% endif %}
+            </p>
         </div>
     </div>
 </footer>
