--- a/staff/templates/staff/index.html
+++ b/staff/templates/staff/index.html
@@ -29,21 +29,8 @@
         <div class="col-lg-3 col-sm-6 col-xs-12">
             <a class="btn btn-success btn-lg btn-block my-3" href="{% url "staff:content:create:image" %}">Create Image <i class="fas fa-camera"></i></a>
         </div>
-        <!--<div class="col-lg-3 col-sm-6 col-xs-12">-->
-            <!--<a class="btn btn-success btn-lg btn-block my-3" href="">Create Audio <i class="fas fa-headphones"></i></a>-->
-        <!--</div>-->
-        <!--<div class="col-lg-3 col-sm-6 col-xs-12">-->
-            <!--<a class="btn btn-success btn-lg btn-block my-3" href="">Create Video <i class="fas fa-video"></i></a>-->
-        <!--</div>-->
-        <!--<div class="col-lg-3 col-sm-6 col-xs-12">-->
-            <!--<a class="btn btn-success btn-lg btn-block my-3" href="">Create Poll <i class="fas fa-clipboard"></i></a>-->
-        <!--</div>-->
-        <!--<div class="col-lg-3 col-sm-6 col-xs-12">-->
-            <!--<a class="btn btn-success btn-lg btn-block my-3" href="">Create Review <i class="fas fa-star"></i></a>-->
-        <!--</div>-->
-        <!--<div class="col-lg-3 col-sm-6 col-xs-12">-->
-            <!--<a class="btn btn-success btn-lg btn-block my-3" href="">Create Sports Game <i class="fas fa-trophy"></i></a>-->
-        <!--</div>-->
+{# STUB_VIDEO #}
+{# STUB_POLL #}
     </div>
 
     {% if user|can:"auth.manage_users" %}
