--- a/staff/templates/staff/index.html
+++ b/staff/templates/staff/index.html
@@ -33,17 +33,17 @@
 {# STUB_POLL #}
     </div>
 
-    {% if user|can:"auth.manage_users" %}
     <h3>Danger Zone</h3>
+    {% if user|can:"auth.manage_users" %}
     <a class="btn btn-danger btn-lg btn-block my-3" href="{% url "staff:user:list" %}">User List <i class="fas fa-users"></i></a>
     {% endif %}
+{# STUB_COMMENT #}
 
     <h3>User Information</h3>
 
     <p>Your name is {{ request.user.get_full_name }}; your username is <code>{{ request.user.username }}</code>.</p>
 
     <p>You belong to the following groups:</p>
-
     <ul>
         {% for group in request.user.groups.all %}
             <li><code>{{ group.name }}</code></li>
@@ -53,7 +53,6 @@
     </ul>
 
     <p>and hold the following permissions:</p>
-
     <ul>
         {% for permission in request.user.get_all_permissions %}
             <li><code>{{ permission }}</code></li>
