--- a/home/templates/home/content/image.html
+++ b/home/templates/home/content/image.html
@@ -1,5 +1,5 @@
 {% with image=content %}
-    <a href="{% url "home:view_content" image.id %}">
+    {% if image.publishable %}<a href="{% url "home:view_content" image.id %}">{% endif %}
         <img src="{{ image.source.url }}" style="max-width: 80%; height: auto;" class="mx-auto d-block mb-2">
-    </a>
+    {% if image.publishable %}</a>{% endif %}
 {% endwith %}
