--- a/staff/templates/staff/users/list.html
+++ b/staff/templates/staff/users/list.html
@@ -1,4 +1,5 @@
 {% extends "staff/base.html" %}
+{% load core %}
 {% load crispy_forms_tags %}
 
 {% block title %}User List{% endblock %}
@@ -8,16 +9,15 @@
 <h1>User List</h1>
 
 <div class="card">
-
-  <div class="card-body">
-    <form method="get">
-      <div class="form-inline">
-      {% crispy form form.helper %}
-      </div>
-      <br/>
-      <button type="submit" class="btn btn-success">Search <i class="fas fa-search"></i></button>
-    </form>
-  </div>
+    <div class="card-body">
+        <form method="get">
+            <div class="form-inline">
+                {% crispy form form.helper %}
+            </div>
+            <br/>
+            <button type="submit" class="btn btn-success">Search <i class="fas fa-search"></i></button>
+        </form>
+    </div>
 </div>
 <br/>
 
