--- a/staff/templates/staff/content/list.html
+++ b/staff/templates/staff/content/list.html
@@ -84,6 +84,7 @@ function doApi(url, verb) {
             <th scope="col">Title</th>
             <th scope="col">Modified</th>
             <th scope="col">Authors</th>
+            <th scope="col">Embed Only</th>
             <th scope="col">Visibility</th>
             <th scope="col">Actions</th>
         </tr>
@@ -97,6 +98,7 @@ function doApi(url, verb) {
             <td>{{ content.title|safe }}</td>
             <td>{{ content.modified|date:"SHORT_DATETIME_FORMAT" }}</td>
             <td>{{ content|names }}</td>
+            <td><i class="fas fa-{{ content.embed_only|yesno:"check,times" }}"></i></td>
             <td>{{ content.get_visibility_display|capfirst }}</td>
             <td>
                 <div class="dropdown">
