--- a/home/templates/home/includes/navbar.html
+++ b/home/templates/home/includes/navbar.html
@@ -4,9 +4,9 @@
         <a class="logo mx-auto py-3 d-none d-lg-block" href="#">
             {% include "home/includes/_logo-svg.html" %}
         </a>
-        <div id="subscribe" class="d-none d-lg-block">
-            <a class="d-inline-block mx-4" href="#">Subscribe</a>
-        </div>
+        <li id="search" class="d-none d-lg-block">
+          <button class="nav-link d-inline-block mx-4" data-toggle="modal" data-target="#searchModal">Search</button>
+        </li>
         <h6 class="lead text-center d-none d-lg-block">Montgomery Blair High School's Online Student Newspaper</h6>
     </header>
     <nav class="navbar navbar-expand-lg">
@@ -26,12 +26,25 @@
                     <a class="nav-link" href="{% url "home:view_section" root_section.name %}">{{ root_section.title }}</a>
                   </li>
                 {% endfor %}
-                <li id="subscribe" class="nav-item d-lg-none">
-                  <a class="nav-link" href="#">Subscribe</a>
+                <li id="search" class="nav-item d-lg-none">
+                  <button type="button" class="py-2 w-100 s-0" data-toggle="modal" data-target="#searchModal">Search</button>
                 </li>
             </ul>
         </div>
     </nav>
 </div>
-
+<div class="modal fade" id="searchModal" tabindex="-1" role="dialog" aria-labelledby="searchModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content">
+            <div class="modal-body">
+                <form class="modal-search-form">
+                    <input class="modal-search-input" type="search" placeholder="Search...">
+                    <button class="modal-search-submit" type="submit">
+                        <i class="fa fa-search"></i>
+                    </button>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 <script defer src="{% static "home/scripts/navbar.js" %}"></script>
