--- a/home/templates/home/about/staff.html
+++ b/home/templates/home/about/staff.html
@@ -1,1 +1,173 @@
-STUB_ABOUT
+{% extends "home/base.html" %}
+
+{% block title %}Staff{% endblock %}
+
+{% block content %}
+<h1>SilverChips Online Staff</h1>
+<br/>
+    div class="container" id="body">
+	<div id="staff_container">
+        <div id="staff_list">
+                <div id="sco">
+                        <img src="/gr/site/sco_logo.png" alt="Silver Chips Online Logo" />
+                        <ul>
+                        <li>Online Editor-in-Chief: <a href="/staff/909">Mehana Daftary</A></li>
+                        <li>Online Editor-in-Chief: <a href="/staff/908">Amy Forsbacka</A></li>
+                        <br/>
+
+                        <!--<li><<a href="/staff/916">--Placeholder--</A>Person, Technical Director</li>-->
+                     	<!--<br/>-->
+
+			<li><a href="/staff/902">Zoe Friedman</A>, Online News Editor</li>
+			<li><a href="/staff/905">Nate Bodner</A>, Online Sports Editor</li>
+			<li><a href="/staff/900">Ellie Williams</A>, Online Features Editor</li>
+			<li><a href="/staff/906">Neva Taylor</A>, Online Entertainment Editor</li>
+			<li><a href="/staff/899">Ryan Handel</A>, Online Opinions Editor</li>
+
+			<br/>
+
+                        <li><a href="/staff/896">Morgan Casey</A>, Online Photo Editor</li>
+			<li><a href="/staff/911">Abigail Landesman</A>, Online Video Editor</li>
+			<br/>
+
+			<li><a href="/staff/903">Alyssa Berrios</A>, Public Relations and Social Media Management</li>
+			</br>
+
+			<li><a href="/staff/919">Absa Fall</A>, Staff Writer</li>
+			<li><a href="/staff/920">Eric Feigen</A>, Staff Writer</li>
+			<li><a href="/staff/921">Mahnaz Habib</A>, Staff Writer</li>
+			<li><a href="/staff/922">Sneha Ojha</A>, Staff Writer</li>
+			<li><a href="/staff/925">Emma Markus</A>, Staff Writer</li>
+			<li><a href="/staff/928">Nene Narh-Mensah</A>, Staff Writer</li>
+			<li><a href="/staff/929">Tiara Oldfield</A>, Staff Writer</li>
+			<li><a href="/staff/932">Arthi Thyagarajan</A>, Staff Writer</li>
+			<li><a href="/staff/933">Madeleine Tilley</A>, Staff Writer</li>
+			<li><a href="/staff/934">Noah Stern</A>, Staff Writer</li>
+                            <li><a href="/staff/935">Rebecca Wessel</A>, Staff Writer</li>
+                            <li><a href="/staff/936">Nobline Yoo</A>, Staff Writer</li>
+                            <li><a href="/staff/937">Oreet Zimand</A>, Staff Writer</li>
+			<li><a href="/staff/938">Reethi Padmanabhan</a>, Staff Writer</li>
+			<li><a href="/staff/941">Isabella DeClue</a>, Spanish Staff Writer</li>
+
+			<br/>
+			<li><a href="/staff/916">Adeola Vassall</A>, Staff Artist</li>
+			<br/>
+			<li><a href="/staff/912">Catherine Horowitz</A>, Photo Staff</li>
+                        <li><a href="/staff/926">Leslie Morales Alvarenga</A>, Photo Staff</li>
+                        <li><a href="/staff/927">Catrina Calingaert</A>, Photo Staff</li>
+                        <li><a href="/staff/930">Victoria Sampson</A>, Photo Staff</li>
+			<li><a href="/staff/939">Leo Blain</A>, Photo Staff</li>
+			<li><a href="/staff/940">Audrey Haverland</A>, Photo Staff</li>
+                        <li><a href="/staff/931">Ruby Santana</A>, Video Staff</li>
+			<li><a href="/staff/924">Lily Kirsch</A>, Video Staff</li>
+			<li><a href="/staff/923">Henry Merlein</A>, Video Staff</li>
+
+<br/>
+                        </ul>
+                </div>
+
+                <div id="scp">
+                        <img src="/gr/site/scp_logo.jpg" alt="Silver Chips Print Logo" />
+                        <ul>
+                        <li>Print Editor-in-Chief:<!-- <a href="/staff/723">--> Eleanor Harris</A></li>
+                        <li>Print Editor-in-Chief: Amanda Wessel</A></li>
+                        <br />
+                        <li>Camille Kirsch</A>, Print Ombudsman</li>
+						<br/>
+                        <li>Anna O'Driscoll</A>, Print News Editor</li>
+                        <li>Reva Kreeger</A>, Print News Editor</li>
+                        <li>Emma Soler</A>, Print Features Editor</li>
+
+                        <li>Winne Luo</A>, Print Op/Ed Editor</li>
+                        <li>Maris Medina</A>, Print Op/Ed Editor</li>
+			<li>Mariam Jiffar</A>, Print Entertainment Editor</li>
+ 			<li>Luisa McGarvey</A>, Print Entertainment Editor</li>
+			<li>Sam Butler</A>, Print Sports Editor</li>
+                        <li>Camille Estrin</A>, Print Sports Editor</li>
+<li>Daliah Barg</A>, Print NewsBriefs Editor</li>
+<li>Julian Bregstone</A>, Print Puzzle Editor</li>
+<br/>
+<li>Sarah Hutter</A>, Print Fact Checker</li>
+<li>Teague Sauter</A>, Print Outreach Coordinator</li>
+
+
+<br />
+                        <li>Ari Goldbloom-Helzner</A>, Copy Editor</li>
+			<br/>
+                        <li>Chimi Sonam</A>, Print Photo Editor</li>
+                        <li>Victoria Tsai</A>, Print Art Editor</li>
+			<li>Candia Gu</A>, Print Art Editor</li>
+
+						<br/>
+                        <li>Cadence Pearson</A>, Photo Staff</li>
+                        <li>Caleb Bauman</A>, Photo Staff</li>
+                        <li>Griffin Reilly</a>, Photo Staff</li>
+                        <li>Chaminda Hangilipola</a>, Photo Staff</li>
+						<li>Ben Doggett</A>, Photo Staff</li>
+						<li>Brennan Winer</a>, Photo Staff</li>
+<li>Sid Sonam</a>, Photo Staff</li>
+						<br/>
+                        <li>Angel Wen</a>, Art Staff</li>
+<li>Nazea Khan</a>, Art Staff</li>
+<li>Shivani Mattikalli</a>, Art Staff</li>
+<li>Meghna Sam</a>, Art Staff</li>
+<li>Alexandra Mendivil</a>, Art Staff</li>
+<li>Rosemary Solomon</a>, Art Staff</li>
+<li>Kendall Delile</a>, Art Staff</li>
+<li>Lindsay Harris</a>, Art Staff</li>
+<li>Nahom Tedla</a>, Art Staff</li>
+<li>Odalis Llerena</a>, Art Staff</li>
+<li>Kevin Alexander Matute</a>, Art Staff</li>
+<li>Edgar Blanco</a>, Art Staff</li>
+
+
+						<br/>
+
+ 						<li>Julian Brown</a>, Staff Writer</li>
+						<li>Georgina Burros</a>, Staff Writer</li>
+						<li>Dawson Do</A>, Staff Writer</li>
+						<li>Joshua Fernandes</A>, Staff Writer</li>
+						<li>Brianna Forte</a>, Staff Writer</li>
+						<li>Grady Jakobsberg</a>, Staff Writer</li>
+						<li>Christian Mussenden</a>, Staff Writer</li>
+						<li>Alexandra Marquez</a>, Staff Writer</li>
+						<li>Alice Park</a>, Staff Writer</li>
+						<li>Niki Patel</a>, Staff Writer</li>
+						<li>Cole Sebastian</a>, Staff Writer</li>
+						<li>Aditi Shetty</a>, Staff Writer</li>
+
+
+
+ 		</ul>
+                </div>
+
+                <div id="scb">
+                        <img src="/gr/site/esquina_logo.jpg" alt="Silver Chips Business Logo" />
+											<ul>
+											<!--<li><a href="/staff/726">Nick Seidell</a>, Executive Business Director</li>
+											<li><a href="/staff/724">Adrian Craig</a>, Executive Advertising Director</li>
+											<li><a href="/staff/775">Mac Keller</a>, Executive Communications Director and Fundraising Manager</li>
+											<li><a href="/staff/779">Jared Collina</a>, Business Staff</li>
+											<li><a href="/staff/780">Daniel Pressley</a>, Business Staff</li>
+											<li><a href="/staff/778">Aniya Wood-Reynolds</a>, Business Staff</li>-->
+<li>Editor-in-Chief: <a href="/staff/890">Mario Menendez</A></li>
+</br>
+<li><a href="/staff/884">Odalis Llerena</a>, Staff Writer</li>
+<li><a href="/staff/885">Andres Perez</a>, Staff Writer</li>
+<li><a href="/staff/886">Carlos Fuentes</a>, Staff Writer</li>
+<li><a href="/staff/887">Alisson Fortis</a>, Staff Writer</li>
+<li><a href="/staff/888">Ilcia Hernandez</a>, Staff Writer</li>
+<li><a href="/staff/889">Sarah Canchaya</a>, Staff Writer</li>
+
+
+
+                      							</ul>
+                </div>
+
+                <div class="clear"></div>
+        </div>
+        </div>
+</div>
+</div>
+
+{% endblock %}
